fixed long title overlap

--- a/app/components/articles/syndicated-trending/syndicated-trending.component.less
+++ b/app/components/articles/syndicated-trending/syndicated-trending.component.less
@@ -37,6 +37,7 @@
     .globalDefaultFont(32px, 800);
     text-align: left;
     margin-top: 20px;
+    width: ~"calc(100% - 90px)";
   }
   &-article-content {
     .globalDefaultFont(16px, 400);
